--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 <body>
   <div class="landing">
     <h1 class="title">Welcome</h1>
-    <button class="buttonInitiate" type="text">START</button>
+    <button class="buttonInitiate" type="text" style="cursor: pointer">Start Game</button>
   </div>
   <div class="game hidden">
-    <span class="title">GREATER OR SMALLER?</span>
+    <h1 class="title">Poker Game</h1>
     <ul class="gameCards">
       <li class="card1"></li>
-      <li class="card2">?</li>
+      <li class="card2">Random Card</li>
     </ul>
     <div class="gameText">
-      <span>Next card would be greater or smaller?</span>
+      <span>What will next card be?</span>
     </div>
     <div class="gameWon hidden">
-      <span>You Win!</span>
+      <span>You Win</span>
     </div>
     <div class="gameLost hidden">
-      <span>You Lose!</span>
+      <span>You Lose</span>
     </div>
-    <div class="button__container">
-      <button class="buttonMore" type="text">Bigger</button>
-      <button class="buttonLess" type="submit">SMALLER</button>
+    <div class="buttonContainer">
+      <button class="button buttonMore" type="text" style="cursor: pointer">Bigger</button>
+      <button class="button buttonLess" type="submit" style="cursor: pointer">Smaller</button>
     </div>
   </div>
 
