--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>CardsGame</title>
   <link rel="stylesheet" href="styles.css">
   <script src="/index.js" defer></script>
+  <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
 </head>
 
 <body>
